--- a/pages/foodItems/foodItems.wxss
+++ b/pages/foodItems/foodItems.wxss
@@ -1,5 +1,5 @@
 page{
-  height: 100%;
+  /* height: 100%; */
 }
 
 .container{
@@ -179,6 +179,8 @@ page{
   width: 100%;
   height: 120rpx;
   border:1rpx solid rgba(224,224,224,1);
+  background-color: #fff;
+  z-index: 99;
 }
 
 .sure button {
