--- a/pages/fooddetail/fooddetail.wxml
+++ b/pages/fooddetail/fooddetail.wxml
@@ -11,7 +11,7 @@
       </block>
     </swiper>
   </view>
-  <view class='collect' bindtap='handleSetGoodsFavor'>
+  <view class='collect' bindtap='handleSetGoodsFavor' wx:if='{{!form}}'>
     <image src='../../img/common/uncollect.png' wx:if='{{!favor}}'></image>
     <image src='../../img/common/collect.png' wx:if='{{favor}}'></image>
   </view>
@@ -84,7 +84,7 @@
         <map id='myMap' style='width: 100%; height: 249rpx;' latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}" scale='10' show-location bindcallouttap='showMapNavigation' hidden='{{overlay}}'></map>
       </view>
     </view>
-    <view class='area padding_0' wx:if='{{goods.goodsBase.lineUp || goods.goodsBase.reserve}}'>
+    <view class='area padding_0' wx:if='{{(goods.goodsBase.lineUp || goods.goodsBase.reserve) && !form}}'>
       <view class='reserve' wx:if='{{goods.goodsBase.reserve}}'>
         <view class='left'>
           <view class='l_title'>预订</view>
@@ -120,7 +120,7 @@
         </view>
       </scroll-view>
     </view>
-    <view class='area' wx:if='{{goodsItem.length}}'>
+    <view class='area' wx:if='{{goodsItem.length && !form}}'>
       <view class='area_title'>套餐在线预订</view>
       <view class='product'>
         <block wx:for='{{goodsItem}}' wx:key='{{index}}'>
@@ -214,7 +214,7 @@
         </block>
       </view>
     </view>
-    <view class='area'>
+    <view class='area' wx:if='{{!form}}'>
       <view class='area_title'>驴友点评</view>
       <block wx:for='{{comment}}' wx:key='{{index}}' wx:if='{{comment.length}}'>
         <view class='comment'>
