--- a/pages/foodorderconfirm/foodorderconfirm.wxml
+++ b/pages/foodorderconfirm/foodorderconfirm.wxml
@@ -39,6 +39,16 @@
           <text>×{{item.foodNumber}}</text>
         </view>
       </view>
+      <block wx:for='{{item.subOrderItems}}' wx:for-item='sub' wx:for-index='idx' wx:key='{{idx}}'>
+        <view class='flex'>
+          <view class='left'>
+            <view>{{sub.food.foodName}}</view>
+          </view>
+          <view class='right'>
+            <text>×{{sub.foodNumber}}</text>
+          </view>
+        </view>
+      </block>
     </block>
   </view>
   <view class='area' wx:if='{{putQuestions.length}}'>
