--- a/pages/foodItems/foodItems.wxss
+++ b/pages/foodItems/foodItems.wxss
@@ -110,6 +110,7 @@ page{
 }
 
 .group .food_row .food .poster{
+  position: relative;
   width: 112rpx;
   height: 112rpx;
   border-radius: 8rpx;
@@ -123,6 +124,16 @@ page{
   vertical-align: top;
 }
 
+.group .food_row .food .poster .img_mask{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.45);
+  z-index: 9;
+}
+
 .group .food_row .food .food_info{
   height: 112rpx;
   flex: 1;
@@ -130,6 +141,10 @@ page{
   justify-content: space-between;
   flex-direction: column;
   max-width: 300rpx;
+}
+
+.group .food_row .food .food_info.limit_food>view{
+  color: #c7c7c7 !important;
 }
 
 .group .food_row .food .food_info .title{
@@ -180,7 +195,7 @@ page{
   height: 120rpx;
   border:1rpx solid rgba(224,224,224,1);
   background-color: #fff;
-  z-index: 99;
+  z-index: 11;
 }
 
 .sure button {
