--- a/pages/fooddetail/fooddetail.wxml
+++ b/pages/fooddetail/fooddetail.wxml
@@ -91,7 +91,7 @@
           <view class='l_subTitle'>提前{{setting.preOrderDays || 0}}天预订 | 中文预订</view>
         </view>
         <view class='right'>
-          <button bindtap='goToTheBookPage'>预订</button>
+          <button bindtap='goToTheBookPage' wx:if='{{setting.preOrderDays}}'>预订</button>
         </view>
       </view>
       <view class='lineUp' wx:if='{{goods.goodsBase.lineUp}}'>
