--- a/pages/myCoupon/myCoupon.wxml
+++ b/pages/myCoupon/myCoupon.wxml
@@ -25,7 +25,7 @@
           <view class='content'>
             <view class='top'>
               <view class='logo'>
-                <image src='{{item.imgUrl}}'></image>
+                <image mode='aspectFill' src='{{item.imgUrl + "?x-oss-process=image/resize,w_200"}}'></image>
               </view>
               <view class='worth'>
                 <view class='discount'>
@@ -83,7 +83,7 @@
           <view class='content'>
             <view class='top'>
               <view class='logo'>
-                <image src='{{item.imgUrl}}'></image>
+                <image mode='aspectFill' src='{{item.imgUrl + "?x-oss-process=image/resize,w_200"}}'></image>
               </view>
               <view class='worth'>
                 <view class='discount'>
@@ -119,7 +119,7 @@
                 <text>{{item.name}}</text>
               </view>
               <view>
-                <text>前往使用></text>
+                <!-- <text>前往使用></text> -->
               </view>
             </view>
           </view>
